--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,8 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Jared Desvaux de Marigny. </br> </br>
+        It uses data from mapbox.com and darksky.net</p>
         <img class="portrait" src="/img/AKDS-005.jpg">
     </div>
 
